add tests for instance/data-access features.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,7 +39,8 @@ add_executable(lv2lint
 	lv2lint.c
 	lv2lint_plugin.c
 	lv2lint_port.c
-	lv2lint_parameter.c)
+	lv2lint_parameter.c
+	lv2lint_ui.c)
 set_target_properties(lv2lint PROPERTIES INTERPROCEDURAL_OPTIMIZATION true) # -flto
 target_link_libraries(lv2lint ${LIBS})
 install(TARGETS lv2lint DESTINATION bin)
