--- a/lv2lint.1.in
+++ b/lv2lint.1.in
@@ -47,6 +47,11 @@ Show verbose test item documentation
 @MAN@.IP
 @MAN@Create mail to plugin author
 
+@MAN@.HP
+@MAN@\fB\-g\fR GREETER
+@MAN@.IP
+@MAN@Custom mail greter
+
 .HP
 \fB\-S\fR warn|note|pass|all
 .IP
