fix last commit.

--- a/lv2lint.1.in
+++ b/lv2lint.1.in
@@ -50,7 +50,7 @@ Show verbose test item documentation
 @MAN@.HP
 @MAN@\fB\-g\fR GREETER
 @MAN@.IP
-@MAN@Custom mail greter
+@MAN@Custom mail greeter
 
 .HP
 \fB\-S\fR warn|note|pass|all
