disable static linking for now.

--- a/meson.build
+++ b/meson.build
@@ -19,7 +19,7 @@ cc = meson.get_compiler('c')
 m_dep = cc.find_library('m')
 lv2_dep = dependency('lv2', version : '>=1.14.0')
 lilv_dep = dependency('lilv-0', version : '>=0.24.0',
-	static : meson.is_cross_build())
+	static : meson.is_cross_build() and false) #FIXME
 curl_dep = dependency('libcurl', required: false)
 elf_dep = dependency('libelf', required: false)
 
