--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,7 +18,7 @@ stages:
 .build_template: &build_definition
   <<: *common_definition
   script:
-    - meson -Db_lto=false --prefix=/ --cross-file "${CI_BUILD_NAME}" -Dstatic-build=false build
+    - meson --prefix=/ --cross-file "${CI_BUILD_NAME}" -Dstatic-build=false build
     - ninja -C build
     - DESTDIR="${CI_PROJECT_DIR}/${BASE_NAME}-$(cat VERSION)/${CI_BUILD_NAME}" ninja -C build install
 
