gitlab-ci: add aarch64 build target.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -48,6 +48,9 @@ i686-linux-gnu:
 arm-linux-gnueabihf:
   <<: *arm_linux_definition
 
+aarch64-linux-gnu:
+  <<: *arm_linux_definition
+
 x86_64-w64-mingw32:
   <<: *universal_w64_definition
 
