--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,8 +22,16 @@ stages:
     - ninja -C build
     - DESTDIR="${CI_PROJECT_DIR}/${BASE_NAME}-$(cat VERSION)/${CI_BUILD_NAME}" ninja -C build install
 
-.universal_linux_template: &universal_linux_definition
-  image: ventosus/universal-linux-gnu
+.universal_linux_template_buster: &universal_linux_definition_buster
+  image: ventosus/universal-linux-gnu:buster
+  <<: *build_definition
+
+.universal_linux_template_stretch: &universal_linux_definition_stretch
+  image: ventosus/universal-linux-gnu:stretch
+  <<: *build_definition
+
+.universal_linux_template_bullseye: &universal_linux_definition_bullseye
+  image: ventosus/universal-linux-gnu:bullseye
   <<: *build_definition
 
 .arm_linux_template: &arm_linux_definition
@@ -39,11 +47,23 @@ stages:
   <<: *build_definition
 
 # building in docker
-x86_64-linux-gnu:
-  <<: *universal_linux_definition
+x86_64-linux-gnu-stretch:
+  <<: *universal_linux_definition_stretch
 
-i686-linux-gnu:
-  <<: *universal_linux_definition
+x86_64-linux-gnu-buster:
+  <<: *universal_linux_definition_buster
+
+x86_64-linux-gnu-bullseye:
+  <<: *universal_linux_definition_bullseye
+
+i686-linux-gnu-stretch:
+  <<: *universal_linux_definition_stretch
+
+i686-linux-gnu-buster:
+  <<: *universal_linux_definition_buster
+
+i686-linux-gnu-bullseye:
+  <<: *universal_linux_definition_bullseye
 
 arm-linux-gnueabihf:
   <<: *arm_linux_definition
