gitlab-ci: build stretch/buster/bullseye on arm

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,20 +22,28 @@ stages:
     - ninja -C build
     - DESTDIR="${CI_PROJECT_DIR}/${BASE_NAME}-$(cat VERSION)/${CI_BUILD_NAME}" ninja -C build install
 
-.universal_linux_template_buster: &universal_linux_definition_buster
-  image: ventosus/universal-linux-gnu:buster
-  <<: *build_definition
-
 .universal_linux_template_stretch: &universal_linux_definition_stretch
   image: ventosus/universal-linux-gnu:stretch
+  <<: *build_definition
+
+.universal_linux_template_buster: &universal_linux_definition_buster
+  image: ventosus/universal-linux-gnu:buster
   <<: *build_definition
 
 .universal_linux_template_bullseye: &universal_linux_definition_bullseye
   image: ventosus/universal-linux-gnu:bullseye
   <<: *build_definition
 
-.arm_linux_template: &arm_linux_definition
-  image: ventosus/arm-linux-gnueabihf
+.arm_linux_template_stretch: &arm_linux_definition_stretch
+  image: ventosus/arm-linux-gnueabihf:stretch
+  <<: *build_definition
+
+.arm_linux_template_buster: &arm_linux_definition_buster
+  image: ventosus/arm-linux-gnueabihf:buster
+  <<: *build_definition
+
+.arm_linux_template_bullseye: &arm_linux_definition_bullseye
+  image: ventosus/arm-linux-gnueabihf:bullseye
   <<: *build_definition
 
 .universal_w64_template: &universal_w64_definition
@@ -65,11 +73,23 @@ i686-linux-gnu-buster:
 i686-linux-gnu-bullseye:
   <<: *universal_linux_definition_bullseye
 
-arm-linux-gnueabihf:
-  <<: *arm_linux_definition
+arm-linux-gnueabihf-stretch:
+  <<: *arm_linux_definition_stretch
 
-aarch64-linux-gnu:
-  <<: *arm_linux_definition
+arm-linux-gnueabihf-buster:
+  <<: *arm_linux_definition_buster
+
+arm-linux-gnueabihf-bullseye:
+  <<: *arm_linux_definition_bullseye
+
+aarch64-linux-gnu-stretch:
+  <<: *arm_linux_definition_stretch
+
+aarch64-linux-gnu-buster:
+  <<: *arm_linux_definition_buster
+
+aarch64-linux-gnu-bullseye:
+  <<: *arm_linux_definition_bullseye
 
 x86_64-w64-mingw32:
   <<: *universal_w64_definition
